Combined stats calculation completed code refactor completed

--- a/templates/statistics_report.erb
+++ b/templates/statistics_report.erb
@@ -1,6 +1,6 @@
 <div style="width: 90%; background-color:#ecf0f1; margin: 0 auto;"> 
     <h1 style="text-align: center; background-color:#d6eaf8">Graphic</h1>
     <%=
-    line(id: :go_profile, header: true, config: {'graphOrientation' => 'vertical'})
+    line(id: :protein_recovery, header: true, config: {'graphOrientation' => 'vertical'})
     %>
 </div>
