Table with combined values (domains-annotations) included in HTML report

--- a/templates/statistics_report.erb
+++ b/templates/statistics_report.erb
@@ -1,6 +1,19 @@
 <div style="width: 90%; background-color:#ecf0f1; margin: 0 auto;"> 
-    <h1 style="text-align: center; background-color:#d6eaf8">Graphic</h1>
+    <h1 style="text-align: center; background-color:#d6eaf8">DomFun Statistics</h1>
+    <h2 style="text-align: center; background-color:#d6eaf8">Number of proteins</h2>
+	<p>Number of CAFA training proteins with annotations in GO molecular functions (GOMF), GO biological process (GOBP) and GO cellular component (GOCC), and of these which ones have domains classified as both superfamily and FunFam.</p>
+	<%= 
     <%=
     line(id: :protein_recovery, header: true, config: {'graphOrientation' => 'vertical'})
     %>
+</div>
+
+<div>
+<h2 style="text-align: center; background-color:#d6eaf8">Number of domain-function connections for each network.</h2>
+<p>Includes functional annotation data from CAFA 2 with protein domain data from CATH-Gene3D (superfamilies and FunFams).</p>
+	<%= 
+	table(id: :domain_term_relations, header: true, border: 2, 
+		cell_align: %w(center, center center center center)) do |data|
+	end
+	%>
 </div>
